Set mod properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ loader_version=0.14.9
 
 # Mod Properties
 mod_version = 1.0.0
-maven_group = com.example
-archives_base_name = fabric-example-mod
+maven_group = dev.seeruk
+archives_base_name = fabricserverutils
 
 # Dependencies
 fabric_version=0.58.5+1.19.1
